--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,16 @@
 <resources>
     <string name="app_name">Sensors</string>
     <string name="keep_updating">Keep Updating</string>
+    <string name="sensor_name">Sensor name</string>
+    <string name="sensor_name_2">Sensor name 2
+    Sensor name 2
+    Sensor name 2
+    </string>
+    <string name="back">Back</string>
+
+    <string name="record">Record</string>
+    <string name="stop_recording">Stop Recording</string>
+
+    <string name="pause">Pause</string>
+    <string name="start">Start</string>
 </resources>
