--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,8 @@
     <string name="app_name">Sensors</string>
     <string name="keep_updating">Keep Updating</string>
     <string name="sensor_name">Sensor name</string>
-    <string name="sensor_name_2">Sensor name 2
-    Sensor name 2
-    Sensor name 2
-    </string>
+    <string name="sensor_name_2">Sensor name 2</string>
+
     <string name="back">Back</string>
 
     <string name="record">Record</string>
@@ -13,4 +11,10 @@
 
     <string name="pause">Pause</string>
     <string name="start">Start</string>
+
+    <string name="data_prefix_3d">x=\ny=\nz=</string>
+
+
+    <string name="data_unit_">a</string>
+
 </resources>
