--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,15 @@
 
     <string name="data_prefix_3d">x=\ny=\nz=</string>
 
+    <string name="data_unit_velocity">m/s²</string>
+    <string name="data_unit_angular_velocity">rad/s</string>
+    <string name="data_unit_temperature">℃</string>
+    <string name="data_unit_degree">°</string>
+    <string name="data_unit_distance">cm</string>
+    <string name="data_unit_relative_humidity">%</string>
 
-    <string name="data_unit_">a</string>
+    <string name="recording_starter_title">Select Sensors to Record</string>
+    <string name="btn_positive">确定</string>
+    <string name="btn_cancel">取消</string>
 
 </resources>
