--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,7 @@
     <string name="value_no_data">--</string>
     <string name="all_sensors">All Sensors</string>
     <string name="status_recording">RECORDING</string>
+    <string name="set_recording_delay">Set Recording Delay</string>
+    <string name="start_or_stop">Start/Stop</string>
 
 </resources>
